--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "framer-motion": "^11.0.3",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "resend": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
